# PianoVisualizer

./: Cargo.toml
src/: config.rs  main.rs  midi_loader.rs  note.rs  shader.wgsl  state.rs  vertex.rs
