[package]
name = "piano_visualizer"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "0.16"            # API grafica moderna cross-platform
winit = "0.28"           # Gestione finestra e input
pollster = "0.3"         # Permette di usare block_on per inizializzare async wgpu
egui = "0.22"            # GUI immediata (editor futuro)
egui-winit = "0.22"
egui-wgpu = "0.22"
bytemuck = "1.24.0"
midly = "0.5.3"